# api_smartmart_dashboard

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/application/use_cases/category/: create_category.py  list_category.py
api/application/use_cases/product/: create_product.py  export_product.py  list_product.py  upload_product.py
api/application/use_cases/sale/: export_sale.py  get_sale.py  list_sales.py  update_sale.py
api/domain/entities/: category_entity.py  product_entity.py  sale_entity.py
api/domain/repositories/: category_repository.py  product_repository.py  sale_repository.py
api/infrastructure/database/models/: categories_model.py  products_model.py  sales_model.py
api/infrastructure/database/repositories/: category_repository.py  product_repository.py  sale_repository.py
api/infrastructure/django/: urls.py
api/infrastructure/django/serializers/: category_serializer.py  product_serializer.py  sale_serializer.py
api/infrastructure/models/: categories_model.py  products_model.py  sales_model.py
core/: settings.py  urls.py
docker/postgres/: init.sql
tests/application/category/: test_create_category.py  test_list_category.py
tests/application/product/: test_create_product.py  test_export_product.py  test_list_product.py  test_upload_product.py
tests/application/sale/: test_export_sale.py  test_get_sale.py  test_list_sale.py  test_update_sale.py
tests/domain/entities/: test_category_entity.py  test_product_entity.py  test_sale_entity.py
tests/domain/repositories/: test_category_repository.py  test_product_repository.py  test_sale_repository.py
(+6 files in other folders)
